WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244303
Wheel event does not stop macOS smooth keyboard scroll
https://bugs.webkit.org/show_bug.cgi?id=244303
Summary
Wheel event does not stop macOS smooth keyboard scroll
Dana Estra
Reported
2022-08-24 13:41:18 PDT
If you enable EventHandlerDrivenSmoothKeyboardScrolling, scroll using the keyboard, then immediately after use the trackpad to scroll, the webpage will scroll back to the position where the keyboard scroll left off.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-24 13:42:14 PDT
<
rdar://problem/99101109
>
Dana Estra
Comment 2
2022-08-24 14:03:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3623
Richard Robinson
Comment 3
2022-09-04 22:17:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4016
EWS
Comment 4
2022-09-16 09:31:22 PDT
Committed
254561@main
(8c822fa15adb): <
https://commits.webkit.org/254561@main
> Reviewed commits have been landed. Closing PR #4016 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug